--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.css">
-
-    <script type="text/javascript" src="/static/js/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title></title>
+	<script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.js"></script>
+	<link href="/static/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/static/plugins/bootstrap/css/htmleaf-demo.css">
+	<link rel="stylesheet" href="/static/css/jquery.mCustomScrollbar.min.css" />
+    <link rel="stylesheet" href="/static/css/custom.css">
+	<link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.css">
 </head>
 <body>
-{% include 'include/header.html' %}
+<div>
+	<div>
+	<nav class="navbar navbar-default" role="navigation">
+    <div class="container">
+
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">平台</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                {% if not article_type_id %}
+                    <li class="active"><a href="/">全部</a></li>
+                    {% else %}
+                    <li><a href="/">全部</a></li>
+                {% endif %}
+                {% for item in article_type_list %}
+                    {% if item.0 == article_type_id %}
+                        <li class="active"><a href="/all/{{ item.0 }}.html">{{ item.1 }}</a></li>
+                    {% else %}
+                        <li><a href="/all/{{ item.0 }}.html">{{ item.1 }}</a></li>
+                    {% endif %}
+                {% endfor %}
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right ">
+                {% if request.session.user_info %}
+                    <li>
+                        <a href="#">{{ request.session.user_info.nickname }}</a>
+                    </li>
+                    <li><a style="padding-left: 0;padding-right: 0;">·</a></li>
+                    <li><a href="/backend/index.html">管理</a></li>
+                    <li><a style="padding-left: 0;padding-right: 0;">|</a></li>
+                    <li><a href="/logout.html">退出</a></li>
+                {% else %}
+                    <li><a href="/login.html">登陆</a></li>
+                    <li><a href="/register.html">注册</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
+	</div>
+	<div class="page-wrapper toggled">
+            <nav id="sidebar" class="sidebar-wrapper">
+              <div class="sidebar-content">
+			  <!--
+                <a href="#" id="toggle-sidebar"><i class="fa fa-bars"></i></a>
+                <div class="sidebar-brand">
+                    <a href="#">pro sidebar</a>
+                </div>
+				-->
+                <div class="sidebar-header">
+                    <div class="user-info">
+                    </div>
+                </div><!-- sidebar-header  -->
+                <div class="sidebar-menu">
+                    <ul>
+
+                        <li class="sidebar-dropdown">
+                            <a  href="#" ><i class="fa fa-tv"></i><span>首页</span></a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li><a href="#">submenu 1 <span class="label label-success">10</span></a> </li>
+                                    <li><a href="#">submenu 2</a></li>
+                                    <li><a href="#">submenu 3</a></li>
+                                    <li><a href="#">submenu 4</a></li>
+                                </ul>
+                            </div>
+                        </li>                  
+                        <li class="sidebar-dropdown">
+                            <a href="#"><i class="fa fa-photo"></i><span>任务管理</span><span class="badge"></span></a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li><a href="#">任务发布</a></li>
+                                    <li><a href="#">submenu 2</a></li>
+                                    <li><a href="#">submenu 3</a></li>
+                                    <li><a href="#">submenu 4</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="sidebar-dropdown">
+                            <a href="#"><i class="fa fa-bar-chart-o"></i><span>Menu 3</span></a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li><a href="#">submenu 1</a></li>
+                                    <li><a href="#">submenu 2</a></li>
+                                    <li><a href="#">submenu 3</a></li>
+                                    <li><a href="#">submenu 4</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="sidebar-dropdown">
+                            <a href="#"><i class="fa fa-diamond"></i><span>Menu 4</span></a>
+                            <div class="sidebar-submenu">
+                                <ul>
+                                    <li><a href="#">submenu 1</a></li>
+                                    <li><a href="#">submenu 2</a></li>
+                                    <li><a href="#">submenu 3</a></li>
+                                    <li><a href="#">submenu 4</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="header-menu"><span>Simple menu</span></li>
+                        <li><a href="#"><i class="fa fa-tv"></i><span>Menu 1</span></a></li>                   
+                        <li><a href="#"><i class="fa fa-photo"></i><span>Menu 2</span></a></li>
+                        <li><a href="#"><i class="fa fa-bar-chart-o"></i><span>Menu 3</span></a></li>
+                        <li><a href="#"><i class="fa fa-diamond"></i><span>Menu 4</span></a></li>
+                    </ul>
+                   </div><!-- sidebar-menu  -->            
+                </div><!-- sidebar-content  -->
+        
+                <div class="sidebar-footer">
+                    <a href="#"><i class="fa fa-bell"></i><span class="label label-warning notification">3</span></a>
+                    <a href="#"><i class="fa fa-envelope"></i><span class="label label-success notification">7</span></a>
+                    <a href="#"><i class="fa fa-gear"></i></a>
+                    <a href="#"><i class="fa fa-power-off"></i></a>
+                </div>
+            </nav><!-- sidebar-wrapper  -->
+            <main class="page-content">
+                <div class="container-fluid">
+                	<header class="htmleaf-header">
+				<h1><span></span></h1>
+				<div class="htmleaf-links">
+				</div>
+			</header>
+                </div>
+            </main><!-- page-content" -->
+        </div><!-- page-wrapper -->
+</div>	
+	
+	<script src="/static/plugins/bootstrap/js/jquery-1.11.0.min.js" type="text/javascript"></script>
+	<script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
+	<script src="/static/plugins/bootstrap/js/bootstrap.js"></script>
+	<script src="/static/js/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="/static/js/custom.js"></script>
 </body>
 </html>
